test/error/sema/invalid-parameter-type.dsk
let f = (x) -> void
    return
end
